[workspace]
members = ["gen"]

[package]
name = "diretto"
version = "0.0.5"
edition = "2024"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Simple library to interact with the drm interface"
readme = "README.md"
documentation = "https://docs.rs/diretto"
repository = "https://github.com/verdiwm/diretto"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
drm = ["dep:rustix"]
gbm = ["dep:pkg-config"]
tracing = ["dep:tracing"]

[dependencies]
rustix = { version = "0.38.44", optional = true, default-features = false, features = [
    "mm",
    "std",
] }
tracing = { version = "0.1.41", optional = true }

[build-dependencies]
pkg-config = { version = "0.3.31", optional = true }

[dev-dependencies]
anyhow = "1.0.95"
rustix = { version = "0.38.44", default-features = false, features = [
    "event",
    "fs",
    "std",
] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "tracing-log",
] }
wgpu = { version = "24.0.0", default-features = false, features = ["wgsl"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
raw-window-handle = "0.6.2"
bytemuck = { version = "1.21.0", features = ["derive"] }
image = "0.25.5"
rand = "0.9.0"
glutin = { version = "0.32.2", default-features = false, features = ["egl"] }

[[example]]
name = "wgpu"
required-features = ["drm", "tracing"]

[[example]]
name = "egl"
required-features = ["drm", "gbm", "tracing"]

[patch.crates-io]
wgpu = { git = "https://github.com/verdiwm/wgpu", branch = "drm-support" }
# wgpu = { path = "../wgpu/wgpu" }
raw-window-handle = { git = "https://github.com/verdiwm/raw-window-handle", branch = "drm-connector" }
