[workspace]
members = ["gen"]

[package]
name = "diretto"
version = "0.0.6"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Simple library to interact with the drm interface"
readme = "README.md"
documentation = "https://docs.rs/diretto"
repository = "https://github.com/verdiwm/diretto"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
tracing = ["dep:tracing"]

[dependencies]
bitflags = "2.8.0"
rustix = { version = "0.38.44", default-features = false, features = [
    "mm",
    "std",
] }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
anyhow = "1.0.95"
rustix = { version = "0.38.44", default-features = false, features = [
    "event",
    "fs",
    "std",
] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "tracing-log",
] }
wgpu = { version = "24.0.0", default-features = false, features = [
    "wgsl",
    "vulkan",
] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
image = "0.25.5"
rand = "0.9.0"
glutin = { version = "0.32.2", default-features = false, features = ["egl"] }

[[example]]
name = "wgpu"
required-features = ["tracing"]

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
