[workspace]
members = ["gen"]

[package]
name = "diretto"
version = "0.0.7"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Simple library to interact with the drm interface"
readme = "README.md"
documentation = "https://docs.rs/diretto"
repository = "https://github.com/verdiwm/diretto"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
tracing = ["dep:tracing"]

[dependencies]
bitflags = "2.9.4"
rustix = { version = "1.1.2", default-features = false, features = [
    "mm",
    "std",
] }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
anyhow = "1.0.99"
rustix = { version = "1.1.2", default-features = false, features = [
    "event",
    "fs",
    "std",
] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "tracing-log",
] }
wgpu = { version = "26.0.1", default-features = false, features = [
    "wgsl",
    "vulkan",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
image = "0.25.8"
rand = "0.9.2"
glutin = { version = "0.32.3", default-features = false, features = ["egl"] }

[[example]]
name = "wgpu"
required-features = ["tracing"]
